# wasm_mock_rust

./: .gitignore  Cargo.toml  Readme.md
cli/: at_http_example.sh  cli.sh  cli2.sh  cli3.sh  fiddler_ws copy.sh  mock_ws.sh  mock_ws_docker.sh  test_suite.xml
crates/http_req/: Cargo.toml  README.md
crates/http_req/.github/workflows/: examples.yml
crates/http_req/examples/: add_headers.rs  get.rs  get_https.rs  head.rs  head_https.rs  post.rs  post_by_ip.rs  post_https.rs
crates/http_req/src/: error.rs  lib.rs  request.rs  response.rs
crates/wasm-mock-codegen/: Cargo.toml
crates/wasm-mock-codegen/src/: lib.rs  main.rs
crates/wasm-mock-macro/: Cargo.toml
crates/wasm-mock-macro/src/: lib.rs
crates/wasm-mock-mqtt/: Cargo.toml  Readme.md  hosts
crates/wasm-mock-mqtt/examples/: mqtt.rs
crates/wasm-mock-mqtt/src/: lib.rs
crates/wasm-mock-util/: Cargo.toml  Readme.md
crates/wasm-mock-util/src/: lib.rs
crates/wasm-mock-websocket/: Cargo.toml  Readme.md
crates/wasm-mock-websocket/src/: channel.rs  handshake.rs  lib.rs
crates/websocket-codec/: Cargo.toml
crates/websocket-codec/examples/: z.rs
crates/websocket-codec/src/: frame.rs  mask.rs  message.rs
examples/automation/: http_req_v2.rs  http|http|http.rs  mock_bin.rs
examples/dynamic_ws/: websocket_call.rs  websocket_set_mock.rs
examples/http_fiddler/: v2.rs  v2_fiddler.rs  v3.rs  v4.rs
examples/ws_tcp_fiddler/: ws.rs
examples/ws_tcp_fiddler/golang_ws_server/: main.go
