[package]
name = "rust_hello"
version = "0.1.0"
authors = ["WasmMock <wasmmock@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wapc-guest = {git = "https://github.com/wasmmock/wapc-rs"}
wasm-mock-util = {path = "crates/wasm-mock-util"}
wasm-mock-websocket = {path = "crates/wasm-mock-websocket"}
wasm-mock-macro = {path = "crates/wasm-mock-macro"}
websocket-codec = {path = "crates/websocket-codec"}
rmp-serde = "0.15.5"
lazy_static = "1.4.0"
httparse = "1.5.1"
serde_json = "1.0"

[[example]]
name = "fiddler_ws"
path = "examples/ws_tcp_fiddler/ws.rs"

[[example]]
name = "websocket_call"
path = "examples/dynamic_ws/websocket_call.rs"

[[example]]
name = "websocket_set_mock"
path = "examples/dynamic_ws/websocket_set_mock.rs"

[[example]]
name = "http"
path = "examples/automation/http|http|http.rs"

[[example]]
name = "v2"
path = "examples/http_fiddler/v2.rs"

[[example]]
name = "v3"
path = "examples/http_fiddler/v3.rs"

[[example]]
name = "v4"
path = "examples/http_fiddler/v4.rs"


[workspace]
resolver = "2"
members = [
    "crates/*"
]