[package]
name = "http_req_wasi"
version = "0.11.1"
license = "MIT"
description = "HTTP client for the WasmEdge network socket API. Derived from the http_req library."
repository = "https://github.com/second-state/http_req"
authors = ["chensiheng", "jayjamesjay"]
readme = "README.md"
categories = ["web-programming::http-client", "network-programming"]
keywords = ["http", "https", "client", "wasmedge", "webassembly"]
edition = "2018"

[lib]
name = "http_req"
path = "src/lib.rs"

[dependencies]
unicase = "^2.6"
wasm-mock-util = { path = "../wasm-mock-util" }
base64 = "0.21.2"
serde_json = "1.0"