[package]
name = "wasm-mock-mqtt"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mqtt-v5 = "0.1.1"
wasm-mock-util = { path = "../wasm-mock-util" }
wasm-mock-macro = {path = "../wasm-mock-macro"}
wapc-guest = {git = "https://github.com/wasmmock/wapc-rs"}

[dev-dependencies]
lazy_static = "1.4.0"
base64 = "0.21.0"