[package]
name = "wasm-mock-websocket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wapc-guest = {git = "https://github.com/wasmmock/wapc-rs"}
wasm-mock-util = { path = "../wasm-mock-util" }
websocket-codec = { path = "../websocket-codec" }
bytes = "1.0.0"
tokio-util = { version="0.7", default-features = false, features = ["codec"] }
bytecodec = "0.4.15"
trackable = "1"
httpcodec = "0.2.3"
lazy_static = "1.4.0"
rmp-serde = "0.15.5"
base64 = "0.21.0"
serde = { version = "1.0.120", features = ["derive"] }